--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react": "^17.0.0",
     "draft-js": "^0.11.5",
     "next": "latest",
     "react": "^16.7.0",
