--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "next": "latest",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.10",
+    "typescript": "^4.1.2"
   }
 }
