--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@types/react": "^17.0.0",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "draft-js": "^0.11.5",
     "next": "latest",
     "react": "^16.7.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
