--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^17.0.0",
     "@types/react-custom-scrollbars": "^4.0.7",
     "draft-js": "^0.11.5",
+    "material-ui": "^0.20.2",
     "next": "latest",
     "react": "^16.7.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.10",
     "typescript": "^4.1.2"
   }
