--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.10",
+    "@types/resize-observer-browser": "^0.1.4",
     "typescript": "^4.1.2"
   }
 }
