--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-custom-scrollbars": "^4.0.7",
     "draft-js": "^0.11.5",
+    "jotai": "^0.11.3",
     "material-ui": "^0.20.2",
     "next": "latest",
     "react": "^16.7.0",
