--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/draft-js": "^0.10.44",
     "@types/react": "^17.0.0",
     "@types/react-custom-scrollbars": "^4.0.7",
     "draft-js": "^0.11.5",
@@ -17,7 +18,8 @@
     "next": "latest",
     "react": "^16.7.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-perfect-scrollbar": "^1.5.8"
   },
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
