--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@types/draft-js": "^0.10.44",
     "@types/react": "^17.0.0",
     "@types/react-custom-scrollbars": "^4.0.7",
+    "autoprefixer": "^10.0.4",
     "draft-js": "^0.11.5",
     "jotai": "^0.11.3",
     "material-ui": "^0.20.2",
     "next": "latest",
+    "postcss": "^8.1.14",
     "react": "^16.7.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.7.0",
-    "react-perfect-scrollbar": "^1.5.8"
+    "react-perfect-scrollbar": "^1.5.8",
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
