--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.10",
     "@types/resize-observer-browser": "^0.1.4",
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0",
     "typescript": "^4.1.2"
   }
 }
