--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-custom-scrollbars": "^4.0.7",
     "autoprefixer": "^10.0.4",
+    "dotenv": "^8.2.0",
     "draft-js": "^0.11.5",
     "firebase": "^8.1.2",
     "jotai": "^0.11.3",
