--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.7.0",
     "react-firebase-hooks": "^2.2.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-with-firebase-auth": "^1.3.2",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
