--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-firebase-hooks": "^2.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-with-firebase-auth": "^1.3.2",
+    "swr": "^0.3.9",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
