--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.7.0",
     "react-firebase-hooks": "^2.2.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-with-firebase-auth": "^1.3.2",
     "swr": "^0.3.9",
