--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-loading-skeleton": "^2.1.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-with-firebase-auth": "^1.3.2",
+    "recoil": "^0.1.2",
     "swr": "^0.3.9",
     "tailwindcss": "^2.0.1"
   },
@@ -34,6 +35,7 @@
     "@types/firebase": "^3.2.1",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.10",
+    "@types/recoil": "^0.0.1",
     "@types/resize-observer-browser": "^0.1.4",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
