--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jotai": "^0.11.3",
     "material-ui": "^0.20.2",
     "next": "latest",
+    "popper.js": "1.15.0",
     "postcss": "^8.1.14",
     "react": "^16.7.0",
     "react-custom-scrollbars": "^4.2.1",
