--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jotai": "^0.11.3",
     "material-ui": "^0.20.2",
     "next": "latest",
+    "next-useragent": "^2.4.0",
     "popper.js": "1.15.0",
     "postcss": "^8.1.14",
     "react": "^16.7.0",
