--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.7.0",
     "react-firebase-hooks": "^2.2.0",
+    "react-input-autosize": "^3.0.0",
     "react-loading-skeleton": "^2.1.1",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-tagsinput": "^3.19.0",
     "react-with-firebase-auth": "^1.3.2",
     "recoil": "^0.1.2",
     "swr": "^0.3.9",
@@ -39,6 +41,8 @@
     "@types/firebase": "^3.2.1",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.10",
+    "@types/react-input-autosize": "^2.2.0",
+    "@types/react-tagsinput": "^3.19.7",
     "@types/recoil": "^0.0.1",
     "@types/resize-observer-browser": "^0.1.4",
     "stylelint": "^13.8.0",
