--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-firebase-hooks": "^2.2.0",
     "react-input-autosize": "^3.0.0",
     "react-loading-skeleton": "^2.1.1",
+    "react-paginate": "^7.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-tagsinput": "^3.19.0",
     "react-with-firebase-auth": "^1.3.2",
@@ -42,6 +43,7 @@
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.10",
     "@types/react-input-autosize": "^2.2.0",
+    "@types/react-paginate": "^6.2.1",
     "@types/react-tagsinput": "^3.19.7",
     "@types/recoil": "^0.0.1",
     "@types/resize-observer-browser": "^0.1.4",
