--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.10.44",
     "@types/firebase": "^3.2.1",
     "@types/node": "^14.14.10",
     "@types/react-input-autosize": "^2.2.0",
